rust/macros/tests/fail/plugin-extra-args.stderr
error: unexpected field 'extra'
  --> tests/fail/plugin-extra-args.rs:14:5
   |
14 |     extra: false
   |     ^^^^^
